[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0", features = ["serde_json", "json", "default"] }
serde = "1.0.197"
base64 = "0.20.0"